src/snapshot_middleware/snapshots/librojo__snapshot_middleware__csv__test__csv_init_with_meta.snap
---
source: src/snapshot_middleware/csv.rs
expression: instance_snapshot
---
snapshot_id: "00000000000000000000000000000000"
metadata:
  ignore_unknown_instances: false
  glob_ignored_children: false
  instigating_source:
    Path: /root/init.csv
  relevant_paths:
    - /root
    - /root/init.luau
    - /root/init.server.luau
    - /root/init.client.luau
    - /root/init.local.luau
    - /root/init.legacy.luau
    - /root/init.csv
    - /root/init.lua
    - /root/init.server.lua
    - /root/init.client.lua
    - /root/init.meta.json5
  context: {}
  specified_id: manually specified
  middleware: ~
  schema: ~
name: root
class_name: LocalizationTable
properties:
  Contents:
    String: "[\n  {\n    key: \"Ack\",\n    example: \"An exclamation of despair\",\n    source: \"Ack!\",\n    values: {\n      es: \"¡Ay!\",\n    },\n  },\n]"
children: []
