src/snapshot_middleware/snapshots/librojo__snapshot_middleware__csv__test__csv_with_meta.snap
---
source: src/snapshot_middleware/csv.rs
expression: instance_snapshot
---
snapshot_id: "00000000000000000000000000000000"
metadata:
  ignore_unknown_instances: true
  glob_ignored_children: false
  instigating_source:
    Path: /foo.csv
  relevant_paths:
    - /foo.csv
    - /foo.meta.json5
  context: {}
  specified_id: ~
  middleware: ~
  schema: ~
name: foo
class_name: LocalizationTable
properties:
  Contents:
    String: "[\n  {\n    key: \"Ack\",\n    example: \"An exclamation of despair\",\n    source: \"Ack!\",\n    values: {\n      es: \"¡Ay!\",\n    },\n  },\n]"
children: []
